--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     <div class="swiper-slide">Slide 1</div>
     <div class="swiper-slide">Slide 2</div>
     <div class="swiper-slide">Slide 3</div>
+    <div class="swiper-slide">Slide 1</div>
+    <div class="swiper-slide">Slide 2</div>
+    <div class="swiper-slide">Slide 3</div>
+    <div class="swiper-slide">Slide 1</div>
+    <div class="swiper-slide">Slide 2</div>
+    <div class="swiper-slide">Slide 3</div>
     ...
   </div>
   <!-- If we need pagination -->
@@ -1309,9 +1315,9 @@
                             your interests, passions and dreams.</p>
                     </div> <a href="experiences.html" class="button button--green-light">All Experiences</a>
                 </div>
-                <div class="gallery-swiper-wrapper">
+                <div class="gallery-swiper-wrapper w-100">
                     <div
-                        class="swiper-container swiper swiper--gallery swiper-container-initialized swiper-container-horizontal">
+                        class="swiper-container swiper swiper--gallery">
                         <div class="swiper-wrapper">
                             <div class="swiper-card-item swiper-slide"><a href="great-migration.html"
                                     class="card-slider__card">
@@ -1531,9 +1537,8 @@
                                 </a></div>
 
                         </div>
-                        <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"></div>
+                        <div class="swiper-pagination"></div>
 
-                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
                     </div>
                     <div class="swiper-cards-buttons">
                         <div slot="button-next" class="swiper-button swiper-button-next" tabindex="0" role="button"
@@ -2330,7 +2335,33 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".swiper--gallery", {
-            slidesPerView: 1,
+            slidesPerView:4,
+            spaceBetween: 30,
+            navigation: {
+                nextEl: ".swiper-cards-buttons .swiper-button-next",
+                prevEl: ".swiper-cards-buttons .swiper-button-prev",
+            },
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            breakpoints: {
+                640: {
+                    slidesPerView: 1.5,
+                    spaceBetween: 10,
+                },
+                768: {
+                    slidesPerView: 2.5,
+                    spaceBetween: 30,
+                },
+                1024: {
+                    slidesPerView: 4,
+                    spaceBetween: 30,
+                },
+            },
+        });
+        var swiper = new Swiper(".swiper--test", {
+            slidesPerView: 7,
             spaceBetween: 30,
             navigation: {
                 nextEl: ".swiper-cards-buttons .swiper-button-next",
@@ -2350,33 +2381,7 @@
                     spaceBetween: 30,
                 },
                 1024: {
-                    slidesPerView: 5,
-                    spaceBetween: 30,
-                },
-            },
-        });
-        var swiper = new Swiper(".swiper--test", {
-            slidesPerView: 1,
-            spaceBetween: 30,
-            navigation: {
-                nextEl: ".swiper-cards-buttons .swiper-button-next",
-                prevEl: ".swiper-cards-buttons .swiper-button-prev",
-            },
-            pagination: {
-                el: ".swiper-pagination",
-                clickable: true,
-            },
-            breakpoints: {
-                640: {
-                    slidesPerView: 1,
-                    spaceBetween: 10,
-                },
-                768: {
-                    slidesPerView: 1,
-                    spaceBetween: 30,
-                },
-                1024: {
-                    slidesPerView: 1,
+                    slidesPerView: 7,
                     spaceBetween: 30,
                 },
             },
