--- a/tour-list.html
+++ b/tour-list.html
@@ -1982,8 +1982,8 @@
         document.querySelectorAll('.filter-select').forEach(item => {
             item.addEventListener('click', e => {
                 e.stopPropagation();
-                document.querySelectorAll('.filter-select').forEach(item => {
-                    item.classList.remove('is-active');
+                document.querySelectorAll('.filter-select').forEach(item2 => {
+                    item != item2  && item2.classList.remove('is-active');
                 });
                 item.classList.toggle('is-active');
                 menuActive = true;
