--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,6 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&amp;display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="build/css/bootstrap.css">
     <link rel="preload" href="build/css/blog.css" as="style">
     <link rel="stylesheet" href="build/css/blog.css">
     <link rel="stylesheet" href="./build/css/style.css">
@@ -935,7 +934,7 @@
         <div>
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-10">
+                    <div class="col-lg-10">
                         <div class="grid cols-padded justify-center">
                             <div class="col-6 col-md-4"><a
                                     href="https://www.mahlatini.com/blog/win-a-luxury-zimbabwe-safari"
@@ -1101,7 +1100,7 @@
                                     class="pagination-link next page">Next <i>Page</i></a></li>
                         </ul>
                     </div>
-                    <div class="col-xl-2">
+                    <div class="col-lg-2">
                         <div class="sticky-lg-top py-4">
                             <strong class="sub-nav__sub-title">Blog ASiatica</strong>
                             <ul class="sub-nav__link-list">
